<resources>
    <string name="app_name">Elephantapps_Sprint1</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_login">Login</string>
    <string name="mail_dogrulama">Mail Doğrulama</string>
    <string name="mailini_kontrol_et">Mailini Kontrol Et</string>
    <string name="mail_adresine_gonderdigimiz_4_haneli_kodu_girmelisin">Mail adresine gönderdiğimiz 4 haneli kodu girmelisin</string>
    <string name="gonder">Gönder</string>
    <string name="kodu_almadin_mi">Kodu almadın mı? </string>
    <string name="yeniden_gonder">Yeniden gönder</string>
    <string name="parolami_unuttum">Parolamı Unuttum</string>
    <string name="parola_sifirlama">Parola Sıfırlama</string>
    <string name="tekrar_yeni_parola">Tekrar Yeni Parola</string>
    <string name="yeni_parola">Yeni Parola</string>
    <string name="vazgec">Vazgeç</string>
    <string name="mailini_gir">Mailini Gir</string>
    <string name="txt_comment">Sana parola yenileme linki göndermemiz için mail adresini girmelisin.</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="google_ile_devam_et">Google ile Devam Et</string>
    <string name="apple_ile_devam_et">Apple ile Devam Et</string>
    <string name="txt_contract"><string name="membership_agreement">Uygulamaya üye olarak; <font color="#FF0000">Üyelik Sözleşmesi</font>’ni ve <font color="#FF0000">Kişisel Veriler ile İlgili Aydınlatma Metni</font>’ni okuduğunuzu ve kabul ettiğinizi onaylamaktasınız.</string>
</string>
    <string name="parolani_mi_unuttun">Parolanı mı unuttun?</string>
    <string name="parola">Parola</string>
    <string name="kayit_ol_or_giris_yap">Kayıt Ol / Giriş Yap</string>
    <string name="kullanmaya_basla">Kullanmaya Başla</string>
    <string name="txt_splash">Selam 👋\n Tomofilya’ya Hoş Geldin!</string>
    <string name="txt_tomopuan">Kaydın tamamlandı. Sana bir süprizimiz var. Hesabına ₺ 10 değerinde 10 Tomopuan tanımladık. Bu tomopuanlar ile ürünlerini roketleyip satışı hızlandırabilirsin.</string>
    <string name="default_web_client_id">109647082699-mgub018f286ots2fhlem76g3fiobcunh.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Kaydet</string>
    <string name="desc_ilani_gazla">İlanınızı gazlayarak ürününüzü öne çıkarabilir, daha çok kullanıcıya ulaşarak daha fazla ciro elde edebilirsiniz.</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</string>
    <string name="crop_image_save_ok">Kaydet</string>
    <string name="txt_gazla_1">Gazlamak için <u>10 Tomopuan</u> satın almalısın.</string>
    <string name="txt_filtrele">Filtrele</string>
    <string name="txt_sirala">Sırala</string>
    <string name="txt_cancel">Vazgeç</string>
    <string name="checkbox_text">Tomofilya ürün ve hizmetleri ile ilgili ticari elektronik ileti (e-posta ve sms) almak istiyorum.</string>
    <string name="lutfen_bilgilerinizi_giriniz">Lütfen bilgilerinizi giriniz.</string>
    <string name="message_successful">Giriş Başarılı</string>
    <string name="email">email</string>
    <string name="ad_soyad">Ad - Soyad</string>
    <string name="verilen_sure_icerisinde_kodu_giremedin">Verilen süre içerisinde kodu giremedin.</string>
    <string name="uzgunuz">Üzgünüz!</string>
    <string name="tekrar_dene">Tekrar Dene</string>

</resources>