<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:padding="24dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/dialog_mail_verification_image"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uzgunuz"
        android:textSize="18sp"
        android:textColor="@color/light"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verilen_sure_icerisinde_kodu_giremedin"
        android:textSize="16sp"
        android:textColor="@color/light"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"/>
    <Button
        android:id="@+id/btn_send_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tekrar_dene"
        android:textColor="@color/background"
        android:textSize="18sp"
        android:theme="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:layout_marginTop="48dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="10dp"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cancel"
        android:textColor="@color/light"
        android:textSize="14sp"
        android:layout_marginVertical="24dp"
        android:layout_gravity="center"/>
</LinearLayout>