<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResetPassword"
    android:background="@color/main_black"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_reset_password"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/main_black"
        >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/parola_sifirlama"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:src="@drawable/password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar_reset_password"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="40dp"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yeni_parola"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/white_outlined_button_bg"
        android:paddingVertical="14dp"
        android:paddingHorizontal="18dp"
        android:textColorHint="@color/white"
        android:layout_below="@id/iv"
        android:layout_marginHorizontal="24dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tekrar_yeni_parola"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/white_outlined_button_bg"
        android:paddingVertical="14dp"
        android:paddingHorizontal="18dp"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/white"
        android:layout_below="@id/et_password"
        android:layout_marginHorizontal="24dp"
        />



    <Button
        android:id="@+id/btn_send"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/gonder"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/et_password_again"
        android:theme="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        />


    <TextView
        android:id="@+id/txt_give_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vazgec"
        android:textSize="18sp"
        android:layout_marginVertical="12dp"
        android:layout_below="@id/btn_send"
        android:layout_centerHorizontal="true"
        android:textColor="@color/main_gray" />

</RelativeLayout>