<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginAndSignin.Login"
    android:background="@color/background"
    android:orientation="vertical"
    android:id="@+id/container"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_outlined_button_bg"
        android:hint="@string/email"
        android:paddingHorizontal="18dp"
        android:paddingVertical="14dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        app:passwordToggleTint="@color/white"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parola"
            android:textSize="16sp"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:textColor="@color/white"
            android:background="@drawable/white_outlined_button_bg"
            android:paddingVertical="14dp"
            android:paddingHorizontal="18dp"
            android:textColorHint="@color/white"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="4dp"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:text="@string/parolani_mi_unuttun"
        android:layout_marginTop="32dp"/>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giris_yap"
        android:textSize="18sp"
        android:textColor="@color/background"
        android:theme="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="40dp"
        android:paddingVertical="10dp"
        />

    <LinearLayout
        android:id="@+id/ll_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:text="ya da"
            android:textColor="@color/light"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/light" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:orientation="horizontal"
        android:background="@drawable/white_outlined_button_bg"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_views"
        android:layout_marginHorizontal="24dp"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/google_logo"
            app:tint="@color/white"
            android:layout_marginStart="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_ile_devam_et"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            />

    </LinearLayout>


</LinearLayout>