<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPassword"
    android:background="@color/background"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_mail_verification"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/background"
        >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/parolami_unuttum"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:src="@drawable/mail_chimp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar_mail_verification"/>

    <TextView
        android:id="@+id/txt_mailini_kontrol_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mailini_gir"
        android:layout_below="@id/iv"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="12dp"/>

    <TextView
        android:id="@+id/txt_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_comment"
        android:layout_below="@id/txt_mailini_kontrol_et"
        android:layout_marginHorizontal="24dp"
        android:textAlignment="center"
        android:textColor="@color/light_grey"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:textColor="@color/white"
        android:background="@drawable/white_outlined_button_bg"
        android:paddingVertical="14dp"
        android:paddingHorizontal="18dp"
        android:textColorHint="@color/white"
        android:layout_below="@id/txt_comment"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="36dp"
        />



    <Button
        android:id="@+id/btn_send"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Gönder"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/et_email"
        android:theme="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        />


    <TextView
        android:id="@+id/txt_give_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vazgeç"
        android:textSize="18sp"
        android:layout_marginVertical="12dp"
        android:layout_below="@id/btn_send"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_grey" />

</RelativeLayout>